--- a/ui/settings/Main.ui
+++ b/ui/settings/Main.ui
@@ -34,11 +34,10 @@
            <x>0</x>
            <y>0</y>
            <width>356</width>
-           <height>240</height>
+           <height>151</height>
           </rect>
          </property>
-         <layout class="QGridLayout" name="gridLayout_Measures">
-         </layout>
+         <layout class="QGridLayout" name="gridLayout_Measures"/>
         </widget>
        </widget>
       </item>
@@ -68,6 +67,42 @@
        <widget class="QCheckBox" name="checkBox_virtualkeboard">
         <property name="text">
          <string/>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item row="2" column="0">
+    <widget class="QGroupBox" name="groupBox_System">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="title">
+      <string>System</string>
+     </property>
+     <layout class="QGridLayout" name="gridLayout_System">
+      <item row="0" column="0">
+       <widget class="QToolButton" name="toolButton_Update">
+        <property name="text">
+         <string>Update</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QToolButton" name="toolButton_Restart">
+        <property name="text">
+         <string>Restart</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="2">
+       <widget class="QToolButton" name="toolButton_Quit">
+        <property name="text">
+         <string>Quit</string>
         </property>
        </widget>
       </item>
