--- a/ui/bottombar/AutopilotBar.ui
+++ b/ui/bottombar/AutopilotBar.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>828</width>
+    <width>950</width>
     <height>102</height>
    </rect>
   </property>
@@ -25,7 +25,7 @@
    </property>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_Autopilot">
-        <property name="sizeConstraint">
+     <property name="sizeConstraint">
       <enum>QLayout::SizeConstraint::SetFixedSize</enum>
      </property>
      <item>
@@ -66,12 +66,12 @@ border-right-color: rgb(83, 83, 84);
 border-bottom-color: rgb(83, 83, 84);</string>
            </property>
            <property name="text">
-            <string>Standby</string>
+            <string>Stand by</string>
            </property>
           </widget>
          </item>
          <item>
-          <widget class="QToolButton" name="toolButton_Display">
+          <widget class="QToolButton" name="toolButton_NextWPT">
            <property name="styleSheet">
             <string notr="true">background-color: rgb(82, 82, 83);
 border-top-color: rgb(159, 157, 160);
@@ -80,7 +80,7 @@ border-right-color: rgb(83, 83, 84);
 border-bottom-color: rgb(83, 83, 84);</string>
            </property>
            <property name="text">
-            <string>Display</string>
+            <string>Next WPT</string>
            </property>
           </widget>
          </item>
@@ -154,7 +154,23 @@ border-bottom-color: rgb(83, 83, 84);</string>
           </spacer>
          </item>
          <item>
-          <widget class="QLabel" name="label_Display">
+          <widget class="QLabel" name="label_State">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="text">
+            <string>Stand by</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignmentFlag::AlignCenter</set>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="label_TargetHeading">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -167,7 +183,23 @@ border-bottom-color: rgb(83, 83, 84);</string>
             </font>
            </property>
            <property name="text">
-            <string>359°</string>
+            <string>___°</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignmentFlag::AlignCenter</set>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="label_Mode">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="text">
+            <string>Regular</string>
            </property>
            <property name="alignment">
             <set>Qt::AlignmentFlag::AlignCenter</set>
