--- a/resources.qrc
+++ b/resources.qrc
@@ -31,6 +31,7 @@
         <file>resources/images/bottombar/imagebutton_alarms.png</file>
         <file>resources/images/bottombar/imagebutton_settings.png</file>
 
+        <file>resources/images/bottombar/alarm_alarm.png</file>
         <file>resources/images/bottombar/alarm_abandon.png</file>
         <file>resources/images/bottombar/alarm_adrift.png</file>
         <file>resources/images/bottombar/alarm_fire.png</file>
